# cmonkey

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Deep.md  README.md  TODO.md  jsmn.h
config/: catppuccin_mocha.theme  cmonkey.conf  dracula.theme  gruvbox_dark.theme  nord.theme  one_dark.theme  solorized_dark.theme  tokyonight.theme
include/: buffer.h  cmonkey.h  config.h  cursor.h  doc_loader.h  draw.h  game.h  input.h  json_wordbank_loader.h  screen.h  term_buf.h  test.h  theme.h  time_manager.h  timer.h  ui.h  wordbank.h
src/: buffer.c  cmonkey.c  conf.c  config.c  doc_loader.c  draw.c  game.c  input.c  json_wordbank_loader.c  main.c  screen.c  term_buf.c  theme.c  time_manager.c  timer.c  ui.c  wc_imp.c  wordbank.c
tests/: test_buf_draw.c  test_json_file_read.c  test_json_wordbank_loader.c  test_main.c  test_timer.c
themes/: cmonkey.conf  dracula.theme
